commiting after error

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="btn zeichen felder" data-action="*">*</div>
             <div class="btn zahl felder" data-action="clear">AC</div>
             <div class="btn zahl felder" data-value="0">0</div>
-            <div class="btn zahl felder" data-action=".">.</div>
+            <div class="btn zahl felder" data-float="comma">.</div>
             <div class="btn zeichen felder" data-action="/">/</div>
 
             <div class="btn gleich felder" data-action="=">=</div>
